--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,19 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Supermercado+One');
+
 /* 
     Add a CSS ruleset to accomplish the following:
     - Use the 'Lato' font family at 18px throughout the body of the document
-    - cover background with the "map-bg.jpg" image in the images directory. 
+    - cover the of the document background with the "map-bg.jpg" image in the images directory. 
 */
-
-nav {
-    font-family: sans-serif;
-    font-size: 10px;
+body {
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+}
+body {
+    background-image: url(../images/map-bg.jpg);
 }
 
-#main {
-    width: 900px;
-    margin: 10px auto;
-}
+nav {font-family: sans-serif;font-size: 10px;}
+#main {width: 900px; margin: 10px auto;}
 
 /* 
     Add a CSS ruleset targeting the restaurant name to accomplish the following:
@@ -21,62 +22,70 @@ nav {
         - set the font size to 45px 
         - set the font color to #5d4037
 */
+header h1 {
+    font-family: 'Supermercado One', sans-serif;
+    font-size: 45px;
+    color: #5d4037;
+}
 
 /* 
     Update the following ruleset (#menu) to accomplish the following:
         - Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. 
 */
-
 #menu {
     columns: 400px 2;
     column-gap: 100px;
+    column-rule: 2px, rosybrown;
 }
 
-section {
-    padding-bottom: 50px;
-}
-
-h2 {
-    margin: 0;
-}
+section {padding-bottom: 50px;}
+h2 {margin: 0;}
 
 /* 
-    Add a CSS ruleset targeting the headings of the menu (e.g. "Starters") to accomplish the following:
+    Add a CSS ruleset targeting targeting the headings of the menu (e.g. "Starters") to accomplish the following:
         - Show each of the section headings of the menu  in small caps
         - set the font color to #6d4c41
 */
+section h2 {
+    font-variant: small-caps;
+    color: #6d4c41;
+}
 
 /* 
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
         - Set the font size to 20px
         - Make the font bold
 */
-
-dd {
-    margin: 0 0 12px 0;
-    display: flex;
+dt {
+    font-size: 20px;
+    font-weight: bold;
 }
 
-.details {
-    order: 1;
-}
+dd {margin: 0 0 12px 0; display: flex;}
+.details {order: 1;}
 
 /* 
      Update the following ruleset (.price) to accomplish the following:
         - Show the price of each item in a large font
         - set the font color to 'firebrick'
 */
-
 .price {
     order: 2;
     padding-left: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: firebrick;
 }
 
-address {
-    padding: 10px;
-}
+address {padding: 10px;}
 
 /* 
     Add a CSS ruleset targeting the footer to accomplish the following:
         - Draw a 2px dashed rosybrown border
 */
+footer {
+    border-radius: 2px;
+    border-style: dashed;
+    border-color: rosybrown;
+
+}
